--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if resource.errors.any? %>
-  <div id="error_explanation">
+  <div id="error_explanation" class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50">
     <h2>
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
