--- a/app/views/organisations_users/index.html.erb
+++ b/app/views/organisations_users/index.html.erb
@@ -1,6 +1,9 @@
-<div class="w-full">
+<div class="w-full mx-auto justify-left md:w-2/3">
   <% if notice.present? %>
     <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
+  <% end %>
+  <% if alert.present? %>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
   <% end %>
   <%= turbo_stream_from @organisation %>
 
@@ -9,7 +12,8 @@
     <%= link_to 'New organisations user', new_organisation_organisations_user_path(@organisation), class: "rounded-lg py-3 px-5 bg-blue-600 text-white block font-medium" %>
   </div>
 
-  <div id="users" class="min-w-full">
+  <div id="users" class="min-w-full my-4">
     <%= render @organisations_users, organisation: @organisation %>
   </div>
+</div>
 </div>
