--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,20 @@
-<h2>Forgot your password?</h2>
+<div class="w-full mx-auto justify-left md:w-2/3">
+  <h2 class="pb-4 text-2xl font-bold">Forgot your password?</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { data: { turbo: false }, method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { data: { turbo: false }, method: :post }) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    </div>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <div class="flex py-2 actions">
+      <%= f.submit "Send me reset password instructions", class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
+    </div>
+    <div class="flex gap-2">
+      <%= render "devise/shared/links" %>
+    </div>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
