--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -1,1 +1,4 @@
-<%= render @user %>
+<div class="w-full mx-auto justify-left md:w-2/3">
+  <h1 class="py-4 text-4xl font-bold">Your account</h1>
+  <%= render @user %>
+</div>
