--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render "shared/sidebar" %>
-    <main class="container flex px-5 mx-auto mt-28">
+    <main class="container flex px-5 pt-24 mx-auto md:pt-0 md:ml-64 md:mt-16">
       <%= yield %>
     </main>
     </div>
