--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full mx-auto md:w-2/3" data-controller="chart" >
+<div class="w-full mx-auto md:w-2/3" data-controller="chart">
   <div class="mx-auto">
     <% if notice.present? %>
     <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
@@ -9,12 +9,14 @@
 
   <%= render partial: "server_header", locals: { server: @server,  organisation: @organisation } %>
 
-  <div class="flex flex-wrap gap-4">
+  <div class="flex flex-wrap gap-2">
     <%= link_to 'Edit this server', edit_organisation_server_path(@organisation, @server), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
       <%= button_to 'Destroy this server', organisation_server_path(@organisation, @server), method: :delete, class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 font-medium" %>
       <%= link_to 'Back to organisation', organisation_path(@organisation), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
   </div>
   <div data-chart-target="chart" class="w-full h-96"></div>
+
+  <%= pie_chart @server.heartbeats.group(:status_code).count, title: "Status codes" %>
 
   <h3 class="py-4 text-lg font-bold">Requests</h3>
   <div id="heartbeats" class="flex flex-col gap-4">
