--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <div class="min-h-screen md:flex" data-controller="hello">
-  <div id="mobile-menu-bar" class="fixed flex justify-between w-full h-16 text-white bg-blue-600 md:h-0 md:hidden">
-    <p>Server uptime monitor</p>
-    <button class="p-4 focus:bg-gray-700" data-action="click->hello#toggleSidebar">
+  <div id="mobile-menu-bar" class="fixed flex items-center justify-between w-full h-16 text-white bg-blue-600 md:h-0 md:hidden">
+    <p class="px-4 font-bold">Server uptime monitor</p>
+    <button class="p-5 focus:bg-gray-700" data-action="click->hello#toggleSidebar">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
       </svg>
