--- a/app/views/servers/_warning_server.html.erb
+++ b/app/views/servers/_warning_server.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id server %>-warning">
+<div id="<%= dom_id server %>-warning", class="p-2">
   <%= render 'servers/server_header', server: server %>
   <%= link_to "Show this server", organisation_server_path(organisation, server), class: "rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
 </div>
