--- a/app/views/servers/_server_header.html.erb
+++ b/app/views/servers/_server_header.html.erb
@@ -7,11 +7,15 @@
 <% end %>
 
 <div id="<%= dom_id(server) + "-server-header" %>">
-  <%= turbo_stream_from server %>
   <div class="flex flex-wrap pb-2 gap-4">
     <div class="w-5 h-5 <%= status_indicator_color %> rounded-full border border-black"></div>
-    <p class="font-bold break-all">
-    <%= server.name %>
-    </p>
+    <div class="flex flex-col">
+      <p class="font-bold break-all">
+      <%= server.name %>
+      </p>
+      <p class="text-sm break-all">
+      <%= server.protocol %><%= server.hostname %>
+      </p>
+    </div>
   </div>
 </div>
