--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -7,10 +7,9 @@
     <p class="inline-block px-3 py-2 mb-5 font-medium text-red-500 rounded-lg bg-red-50" id="notice"><%= alert %></p>
   <% end %>
 
+  <%= turbo_stream_from @server %>
+  <%= turbo_stream_from @organisation %>
   <%= render partial: "server_header", locals: { server: @server,  organisation: @organisation } %>
-  <p class="text-sm break-all">
-  <%= @server.protocol %><%= @server.hostname %>
-  </p>
 
   <div class="flex flex-wrap gap-2">
     <%= link_to 'Edit this server', edit_organisation_server_path(@organisation, @server), class: "mt-2 rounded-lg py-3 px-5 bg-gray-100 inline-block font-medium" %>
