--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,7 +1,20 @@
-<div>
-    <% if notice.present? %>
-      <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
+<div class="w-full mx-auto justify-left md:w-2/3">
+  <% if notice.present? %>
+    <p class="inline-block px-3 py-2 mb-5 font-medium text-green-500 rounded-lg bg-green-50" id="notice"><%= notice %></p>
+  <% end %>
+  <h1 class="py-2 text-2xl font-bold">Failing servers across your organisations</h1>
+  <div class="flex flex-wrap gap-4">
+    <% if @problem_servers.empty? %>
+      <h3 class="text-xl">No problems at this time</h3>
+    <% else %>
+      <% @problem_servers.each do |org| %>
+        <% organisation = org[:organisation] %>
+        <div class="px-4 py-4 bg-red-200 rounded-lg">
+          <h2 class="pb-2 text-xl font-bold"><%= organisation.name %></h2>
+          <%= render partial: "servers/problem_server", collection: org[:servers], as: :server, locals: { organisation: organisation } %>
+
+        </div>
+      <% end %>
     <% end %>
-  <h1 class="text-4xl font-bold">Dashboard#index</h1>
-  <p>Find me in app/views/dashboard/index.html.erb</p>
+  </div>
 </div>
